Update 'adtq2ocp0-go' component image to: quay.io/rhtap_qe/rhtap-qe:c9bdabc15bb24f868edae2eeff0a673707857893@sha256:897c90ea9c0bbb28bbf83524d0ad29a65127cec29a8c9bdb200844e6a432d4f5

--- a/components/adtq2ocp0-go/overlays/development/deployment-patch.yaml
+++ b/components/adtq2ocp0-go/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: adtq2ocp0-go
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe:c9bdabc15bb24f868edae2eeff0a673707857893@sha256:897c90ea9c0bbb28bbf83524d0ad29a65127cec29a8c9bdb200844e6a432d4f5
+          name: container-image
